<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/reg_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/reg_name"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_app_name"
        app:layout_constraintVertical_bias="0.047" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@android:drawable/ic_dialog_email"
        android:ems="10"
        android:hint="@string/email_username"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_app_name"
        app:layout_constraintVertical_bias="0.218" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_app_name"
        app:layout_constraintVertical_bias="0.379" />

    <EditText
        android:id="@+id/reg_confirm_password"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_app_name"
        app:layout_constraintVertical_bias="0.55"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/reg_register_button"
        style="@style/smallCaseButton"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_border"
        android:text="@string/register"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_confirm_password"
        app:layout_constraintVertical_bias="0.218"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/alreadyMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerLogin"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.247"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/invalidNameWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/invalidWarning"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_name"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/reg_email"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/invalidEmailRegWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/invalidWarning"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_email"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/reg_password"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/invalidPasswordRegWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/invalidWarning"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_password"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/reg_confirm_password"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/invalidConfirmPasswordWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/invalidWarning"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_confirm_password"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/reg_register_button"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>