<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/forgot_password_email"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:drawableLeft="@android:drawable/ic_dialog_email"
        android:ems="10"
        android:hint="@string/email_username"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/enter_email_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterEmailForgotPassword"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/forgot_password_email"
        app:layout_constraintVertical_bias="0.896" />

    <Button
        android:id="@+id/reset_password_button"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:text="@string/reset_password"
        android:layout_marginLeft="8dp"
        android:textSize="21sp"
        style="@style/smallCaseButton"
        android:background="@drawable/button_border"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_email"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.113" />

    <TextView
        android:id="@+id/email_forgot_error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/invalidWarning"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_email"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/reset_password_button"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>