<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/appBackground"
    tools:context="com.jullae.ui.loginscreen.LoginActivity">

    <View
        android:id="@+id/right_hr"
        android:layout_width="140dp"
        android:layout_height="0.2dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/username_field"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/or_hr"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_login"
        app:layout_constraintVertical_bias="0.506"
        tools:layout_editor_absoluteY="83dp" />

    <!--<ImageView
        android:id="@+id/facebook_icon"
        android:layout_width="21dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/facebook_login"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintLeft_toLeftOf="@+id/facebook_login"
        app:layout_constraintRight_toRightOf="@+id/facebook_login"
        app:layout_constraintTop_toTopOf="@+id/facebook_login"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/facebook_button_icon"/> -->

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login"
        style="@style/smallCaseButton"
        android:layout_width="308dp"
        android:layout_height="27dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name"
        app:layout_constraintVertical_bias="0.006"
        tools:layout_editor_absoluteY="69dp" />
        <!--android:background="@drawable/facebook_button"
        android:text="@string/loginFacebook"
        android:textColor="@color/white" -->


    <Button
        android:id="@+id/google_login"
        style="@style/smallCaseButton"
        android:layout_width="308dp"
        android:layout_height="27dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/google_button"
        android:text="@string/loginGoogle"
        app:layout_constraintBottom_toTopOf="@+id/username_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook_login"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="@color/colorAppName"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <View
        android:id="@+id/left_hr"
        android:layout_width="140dp"
        android:layout_height="0.2dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/username_field"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/or_hr"
        app:layout_constraintTop_toBottomOf="@+id/google_login"
        app:layout_constraintVertical_bias="0.506"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="101dp" />

    <EditText
        android:id="@+id/username_field"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="111dp"
        android:drawableLeft="@android:drawable/ic_dialog_email"
        android:ems="10"
        android:hint="@string/email_username"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/google_login" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="147dp"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_login" />

    <Button
        android:id="@+id/login_button"
        style="@style/smallCaseButton"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_marginBottom="165dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_border"
        android:text="@string/login"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/forgotPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/or_hr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Or"
        app:layout_constraintBottom_toTopOf="@+id/username_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_login"
        app:layout_constraintVertical_bias="0.41000003"
        app:layout_constraintHorizontal_bias="0.501" />

    <ImageView
        android:id="@+id/google_icon"
        android:layout_width="21dp"
        android:layout_height="19dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/google_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/google_login"
        app:layout_constraintRight_toRightOf="@+id/google_login"
        app:layout_constraintTop_toTopOf="@+id/google_login"
        app:srcCompat="@drawable/google_button_icon" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/signUp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/terms_and_conditons"
        app:layout_constraintVertical_bias="0.41" />

    <TextView
        android:id="@+id/terms_and_conditons"
        android:layout_width="266dp"
        android:layout_height="29dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/termsConditions"
        android:textAlignment="center"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/invalidEmailWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/invalidWarning"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/username_field"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/password_field"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/invalidPasswordWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/invalidWarning"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/password_field"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
